--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/react": "^1.6.16",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-mdx": "^1.2.34",
     "gatsby-plugin-sharp": "^2.6.25",
     "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.12",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.12.0",
