--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
     "gatsby": "^2.23.12",
@@ -23,6 +24,7 @@
     "gatsby-plugin-mdx": "^1.2.34",
     "gatsby-plugin-sharp": "^2.6.25",
     "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.12",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -30,6 +32,7 @@
     "react-dom": "^16.12.0",
     "react-swipeable-views": "^0.13.9"
   },
+  "plugin": {},
   "devDependencies": {
     "cross-env": "^7.0.2",
     "prettier": "2.0.5"
